--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,10 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-messaging:11.0.4'
     compile 'com.android.support:wear:27.0.0'
     compile 'com.google.android.support:wearable:2.1.0'
+    compileOnly 'com.google.android.wearable:wearable:2.3.0'
     provided 'com.google.android.wearable:wearable:2.1.0'
     compile 'com.android.volley:volley:1.1.0'
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -31,3 +33,7 @@ dependencies {
 //    implementation 'com.android.support:wear:26.1.0'
 //    compileOnly 'com.google.android.wearable:wearable:2.3.0'
 }
+
+
+
+apply plugin: 'com.google.gms.google-services'
